-mapView is no longer accessing mapModel directly -shifted some attributes from mapModel to mapView because they make more sense in the view -now using strict mode for javascript -sidebar now autohides after click if screen width is small

--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ nav li a {
  * MEDIA QUERY
  *********************************/
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
 	/*smaller sidebars when screen is smaller*/
 	nav div#filter {
 		width: 150px;
